--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon server.js",
     "start": "node server.js",
-    "build": "echo 'No build step needed for this project'",
+    "build": "echo 'No build step needed for this project'"
   },
   "keywords": [],
   "author": "",
